deploy: 756d76880175d89545da37e7ba795f5647cfa7fa

--- a/print.html
+++ b/print.html
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li><li class="chapter-item expanded "><a href="users/redirecting-with-aoba.html"><strong aria-hidden="true">4.4.</strong> with Aoba (Lume & Hono)</a></li></ol></li><li class="chapter-item expanded "><a href="users/backfeed.html"><strong aria-hidden="true">5.</strong> Backfeed</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="users/backfeed-based-on-webmention.html"><strong aria-hidden="true">5.1.</strong> based on Webmention (TODO)</a></li><li class="chapter-item expanded "><a href="users/backfeed-based-on-mastodon-comments.html"><strong aria-hidden="true">5.2.</strong> based on Mastodon Comments (WIP)</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="admins/install-with-docker.html"><strong aria-hidden="true">6.</strong> Install with Docker</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="developers/prepare.html"><strong aria-hidden="true">7.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="developers/development-local.html"><strong aria-hidden="true">8.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="developers/development-docker.html"><strong aria-hidden="true">9.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="others/compatibility-chart.html"><strong aria-hidden="true">10.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="others/json-feed-extension.html"><strong aria-hidden="true">11.</strong> JSON Feed Extension</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li><li class="chapter-item expanded "><a href="users/redirecting-with-aoba.html"><strong aria-hidden="true">4.4.</strong> with Aoba (Lume & Hono)</a></li></ol></li><li class="chapter-item expanded "><a href="users/backfeed.html"><strong aria-hidden="true">5.</strong> Backfeed</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="users/backfeed-based-on-webmention.html"><strong aria-hidden="true">5.1.</strong> based on Webmention (TODO)</a></li><li class="chapter-item expanded "><a href="users/backfeed-based-on-mastodon-comments.html"><strong aria-hidden="true">5.2.</strong> based on Mastodon Comments (WIP)</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="admins/install-with-docker.html"><strong aria-hidden="true">6.</strong> Install with Docker</a></li><li class="chapter-item expanded "><a href="admins/create-account.html"><strong aria-hidden="true">7.</strong> Create Account</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="developers/prepare.html"><strong aria-hidden="true">8.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="developers/development-local.html"><strong aria-hidden="true">9.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="developers/development-docker.html"><strong aria-hidden="true">10.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="others/compatibility-chart.html"><strong aria-hidden="true">11.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="others/json-feed-extension.html"><strong aria-hidden="true">12.</strong> JSON Feed Extension</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -227,7 +227,6 @@ and forwards the received responses back to the site in a Webmention.</p>
 <p>Until then, you'll need to <a href="users/../admins/install-with-docker.html">self-host the instance</a> or find an person running a Hatsu instance and have them create an account.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="feed"><a class="header" href="#feed">Feed</a></h1>
 <p>For Hatsu to work, your site needs to have one of the valid <a href="https://jsonfeed.org/version/1.1/">JSON</a> / <a href="https://en.wikipedia.org/wiki/Atom_(web_standard)">Atom</a> / <a href="https://en.wikipedia.org/wiki/RSS">RSS</a> feeds.</p>
-<p>Hatsu uses serde direct parsing of JSON feeds internally and parses Atom / RSS via <a href="https://github.com/feed-rs/feed-rs"><code>feed-rs</code></a>, so JSON Feed are supported first-class.</p>
 <p>These feeds should be auto-discoverable on the homepage:</p>
 <pre><code class="language-html">&lt;html&gt;
     &lt;head&gt;
@@ -322,12 +321,7 @@ which you need to save to the SSG equivalent of the static files directory and m
 <p>Since Hatsu's object URLs are predictable, you just need to make sure:</p>
 <ul>
 <li>The page you want to set up for auto-discovery is in the Feed.</li>
-<li>The actual URL of the page is the same as in the Feed. Hatsu handles it this way:
-<ul>
-<li><code>https://example.com/posts/foo =&gt; https://example.com/posts/foo</code></li>
-<li><code>foo/bar</code> =&gt; <code>https://example.com/foo/bar</code></li>
-</ul>
-</li>
+<li>The actual URL of the page is the same as in the Feed. (see <a href="users/./feed.html">./feed</a>)</li>
 </ul>
 <p>That's it! For <code>https://example.com/foo/bar</code>, just add the following tag to the <code>document.head</code>:</p>
 <blockquote>
@@ -529,6 +523,21 @@ const url = new URL(`/api/v1/statuses/${id}/context`, origin)
 <p>In order to add other accounts, you also need to set the <code>HATSU_ACCESS_TOKEN</code> variable.</p>
 <p>This can be any string, but I recommend generating a random uuid v4.</p>
 <pre><code class="language-bash">echo &quot;HATSU_ACCESS_TOKEN = \&quot;$(cat /proc/sys/kernel/random/uuid)\&quot;&quot; &gt;&gt; .env
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="create-account"><a class="header" href="#create-account">Create Account</a></h1>
+<p>Ensure you set <code>HATSU_ACCESS_TOKEN</code> correctly in the <a href="admins/./install-with-docker.html">previous section</a> first, otherwise you will not be able to use the Hatsu Admin API.</p>
+<h2 id="just"><a class="header" href="#just">just</a></h2>
+<p>The easiest way to create an account is the <a href="https://github.com/casey/just"><code>just</code></a> command line tool:</p>
+<pre><code class="language-bash">just account create example.com
+</code></pre>
+<p>If you are using docker, you need to exec to the container first.</p>
+<pre><code class="language-bash">docker exec -it hatsu /bin/bash
+</code></pre>
+<h2 id="curl"><a class="header" href="#curl">curl</a></h2>
+<p>You can also access the API via curl, as <code>Justfile</code> does.</p>
+<pre><code class="language-bash">curl -X POST &quot;http://localhost:$(echo $HATSU_LISTEN_PORT)/api/v0/admin/create-account?token=$(echo $HATSU_ACCESS_TOKEN)&quot; \
+  -H &quot;Content-Type: application/json&quot; \
+  -d &quot;{\&quot;name\&quot;: \&quot;example.com\&quot;}&quot;
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="prepare"><a class="header" href="#prepare">Prepare</a></h1>
 <h2 id="clone-repository"><a class="header" href="#clone-repository">Clone Repository</a></h2>
