--- a/print.html
+++ b/print.html
@@ -8,13 +8,15 @@
 
 
         <!-- Custom HTML head -->
-        
+        <meta property="og:image" content="https://repository-images.githubusercontent.com/668140281/99a7c144-a4cb-4df9-afee-6b2ada11deab" />
+        <meta property="twitter:image" content="https://repository-images.githubusercontent.com/668140281/99a7c144-a4cb-4df9-afee-6b2ada11deab" />
+        <meta name="twitter:card" content="summary_large_image" />
+
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
         <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
         <link rel="stylesheet" href="css/variables.css">
         <link rel="stylesheet" href="css/general.css">
         <link rel="stylesheet" href="css/chrome.css">
