--- a/print.html
+++ b/print.html
@@ -480,7 +480,7 @@ app.use('/posts/*', hatsuObject({ instance }))
     import Comments from 'https://esm.run/@oom/mastodon-comments'
     customElements.define('oom-comments', Comments)
 &lt;/script&gt;
-&lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@oom/mastodon-comments/src/styles.css&quot; /&gt;`
+&lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@oom/mastodon-comments/src/styles.css&quot; /&gt;
 &lt;oom-comments src=&quot;https://mastodon.gal/@misteroom/110810445656343599&quot;&gt;
   No comments yet
 &lt;/oom-comments&gt;
