--- a/admins/install.html
+++ b/admins/install.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Prepare - Hatsu Documentation</title>
+        <title>Install - Hatsu Documentation</title>
 
 
         <!-- Custom HTML head -->
@@ -92,7 +92,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="../users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="../users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="../users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-aoba.html"><strong aria-hidden="true">4.4.</strong> with Aoba (Lume & Hono)</a></li></ol></li><li class="chapter-item expanded "><a href="../users/backfeed.html"><strong aria-hidden="true">5.</strong> Backfeed</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/backfeed-based-on-webmention.html"><strong aria-hidden="true">5.1.</strong> based on Webmention (TODO)</a></li><li class="chapter-item expanded "><a href="../users/backfeed-based-on-mastodon-comments.html"><strong aria-hidden="true">5.2.</strong> based on Mastodon Comments (WIP)</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="../admins/install.html"><strong aria-hidden="true">6.</strong> Install</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../admins/install-docker.html"><strong aria-hidden="true">6.1.</strong> Docker Installation</a></li><li class="chapter-item expanded "><a href="../admins/install-binary.html"><strong aria-hidden="true">6.2.</strong> Binary Installation</a></li></ol></li><li class="chapter-item expanded "><a href="../admins/environments.html"><strong aria-hidden="true">7.</strong> Environments</a></li><li class="chapter-item expanded "><a href="../admins/create-account.html"><strong aria-hidden="true">8.</strong> Create Account</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/prepare.html" class="active"><strong aria-hidden="true">9.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/development-local.html"><strong aria-hidden="true">10.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/development-docker.html"><strong aria-hidden="true">11.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">12.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">13.</strong> JSON Feed Extension</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="../users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="../users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="../users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-aoba.html"><strong aria-hidden="true">4.4.</strong> with Aoba (Lume & Hono)</a></li></ol></li><li class="chapter-item expanded "><a href="../users/backfeed.html"><strong aria-hidden="true">5.</strong> Backfeed</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/backfeed-based-on-webmention.html"><strong aria-hidden="true">5.1.</strong> based on Webmention (TODO)</a></li><li class="chapter-item expanded "><a href="../users/backfeed-based-on-mastodon-comments.html"><strong aria-hidden="true">5.2.</strong> based on Mastodon Comments (WIP)</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="../admins/install.html" class="active"><strong aria-hidden="true">6.</strong> Install</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../admins/install-docker.html"><strong aria-hidden="true">6.1.</strong> Docker Installation</a></li><li class="chapter-item expanded "><a href="../admins/install-binary.html"><strong aria-hidden="true">6.2.</strong> Binary Installation</a></li></ol></li><li class="chapter-item expanded "><a href="../admins/environments.html"><strong aria-hidden="true">7.</strong> Environments</a></li><li class="chapter-item expanded "><a href="../admins/create-account.html"><strong aria-hidden="true">8.</strong> Create Account</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/prepare.html"><strong aria-hidden="true">9.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/development-local.html"><strong aria-hidden="true">10.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/development-docker.html"><strong aria-hidden="true">11.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">12.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">13.</strong> JSON Feed Extension</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -151,7 +151,7 @@
                         <a href="https://github.com/importantimport/hatsu" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/developers/prepare.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/admins/install.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -180,28 +180,17 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="prepare"><a class="header" href="#prepare">Prepare</a></h1>
-<h2 id="clone-repository"><a class="header" href="#clone-repository">Clone Repository</a></h2>
-<p>It will create a <code>hatsu</code> subfolder in the current path.</p>
-<pre><code class="language-bash">git clone https://github.com/importantimport/hatsu.git &amp;&amp; cd hatsu
-</code></pre>
-<h2 id="contributing"><a class="header" href="#contributing">Contributing</a></h2>
-<p>Go to the <code>hatsu</code> folder and you can see these:</p>
-<ul>
-<li><a href="https://github.com/importantimport/hatsu/tree/main/docs"><code>docs</code></a> - The documentation you're looking at right now, uses <a href="https://github.com/rust-lang/mdBook">mdBook</a> to build.</li>
-<li><a href="https://github.com/importantimport/hatsu/tree/main/migration"><code>migration</code></a> - <a href="https://www.sea-ql.org/SeaORM/docs/migration/setting-up-migration/">SeaORM Migration</a>.</li>
-<li><a href="https://github.com/importantimport/hatsu/tree/main/src"><code>src</code></a> - Main application.</li>
-</ul>
+                        <h1 id="install"><a class="header" href="#install">Install</a></h1>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../admins/create-account.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../users/backfeed-based-on-mastodon-comments.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../developers/development-local.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../admins/install-docker.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -211,11 +200,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../admins/create-account.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../users/backfeed-based-on-mastodon-comments.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../developers/development-local.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../admins/install-docker.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
