--- a/print.html
+++ b/print.html
@@ -93,7 +93,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li><li class="chapter-item expanded "><a href="users/redirecting-with-aoba.html"><strong aria-hidden="true">4.4.</strong> with Aoba (Lume & Hono)</a></li></ol></li><li class="chapter-item expanded "><a href="users/backfeed.html"><strong aria-hidden="true">5.</strong> Backfeed</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="users/backfeed-based-on-webmention.html"><strong aria-hidden="true">5.1.</strong> based on Webmention (TODO)</a></li><li class="chapter-item expanded "><a href="users/backfeed-based-on-mastodon-comments.html"><strong aria-hidden="true">5.2.</strong> based on Mastodon Comments (WIP)</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="admins/install-with-docker.html"><strong aria-hidden="true">6.</strong> Install with Docker</a></li><li class="chapter-item expanded "><a href="admins/create-account.html"><strong aria-hidden="true">7.</strong> Create Account</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="developers/prepare.html"><strong aria-hidden="true">8.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="developers/development-local.html"><strong aria-hidden="true">9.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="developers/development-docker.html"><strong aria-hidden="true">10.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="others/compatibility-chart.html"><strong aria-hidden="true">11.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="others/json-feed-extension.html"><strong aria-hidden="true">12.</strong> JSON Feed Extension</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li><li class="chapter-item expanded "><a href="users/redirecting-with-aoba.html"><strong aria-hidden="true">4.4.</strong> with Aoba (Lume & Hono)</a></li></ol></li><li class="chapter-item expanded "><a href="users/backfeed.html"><strong aria-hidden="true">5.</strong> Backfeed</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="users/backfeed-based-on-webmention.html"><strong aria-hidden="true">5.1.</strong> based on Webmention (TODO)</a></li><li class="chapter-item expanded "><a href="users/backfeed-based-on-mastodon-comments.html"><strong aria-hidden="true">5.2.</strong> based on Mastodon Comments (WIP)</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="admins/install.html"><strong aria-hidden="true">6.</strong> Install</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="admins/install-docker.html"><strong aria-hidden="true">6.1.</strong> Docker Installation</a></li><li class="chapter-item expanded "><a href="admins/install-binary.html"><strong aria-hidden="true">6.2.</strong> Binary Installation</a></li></ol></li><li class="chapter-item expanded "><a href="admins/environments.html"><strong aria-hidden="true">7.</strong> Environments</a></li><li class="chapter-item expanded "><a href="admins/create-account.html"><strong aria-hidden="true">8.</strong> Create Account</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="developers/prepare.html"><strong aria-hidden="true">9.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="developers/development-local.html"><strong aria-hidden="true">10.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="developers/development-docker.html"><strong aria-hidden="true">11.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="others/compatibility-chart.html"><strong aria-hidden="true">12.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="others/json-feed-extension.html"><strong aria-hidden="true">13.</strong> JSON Feed Extension</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -523,15 +523,85 @@ const url = new URL(`/api/v1/statuses/${id}/context`, origin)
 </code></pre>
 <p>Upon receiving a request, Hatsu's corresponding API will attempt to decode the base64url ID and return the data.</p>
 <p>If you're interested in the code, you can also take a look at <a href="https://github.com/importantimport/hatsu/blob/main/crates/api_mastodon/src/routes/statuses/status_context.rs">routes/statuses/status_context.rs</a> and <a href="https://github.com/importantimport/hatsu/blob/main/crates/api_mastodon/src/entities/context.rs">entities/context.rs</a>.</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="install-with-docker"><a class="header" href="#install-with-docker">Install with Docker</a></h1>
-<p>Hatsu has not yet released an docker image (this will be done when v0.1.0 is released)</p>
-<p>So for now you need to follow the steps in <a href="admins/../developers/prepare.html">Prepare</a> and <a href="admins/../developers/development-docker.html">Docker Development</a>.</p>
-<p>In order to add other accounts, you also need to set the <code>HATSU_ACCESS_TOKEN</code> variable.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="install"><a class="header" href="#install">Install</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="docker-installation"><a class="header" href="#docker-installation">Docker Installation</a></h1>
+<h2 id="stable"><a class="header" href="#stable">Stable</a></h2>
+<p>Doesn't have a stable version yet.</p>
+<h2 id="nightly"><a class="header" href="#nightly">Nightly</a></h2>
+<p>Hatsu provides nightly Docker image builds.</p>
+<p>Please note that it is unstable and may contain breaking changes.</p>
+<pre><code class="language-bash">docker pull ghcr.io/importantimport/hatsu:nightly
+</code></pre>
+<p>Run with <code>docker run</code>:</p>
+<pre><code class="language-bash">docker run -d \
+  --name hatsu \
+  --restart unless-stopped \
+  -p 3939:3939 \
+  -v /opt/hatsu/hatsu.sqlite3:/app/hatsu.sqlite3 \
+  -e DATABASE_URL=sqlite://hatsu.sqlite3 \
+  -e HATSU_DOMAIN={{hatsu-instance-domain}} \
+  -e HATSU_LISTEN_HOST=0.0.0.0 \
+  -e HATSU_PRIMARY_ACCOUNT={{your-static-site}} \
+  -e HATSU_ACCESS_TOKEN=edc7e5a7-f2ce-44a6-a57e-b7706503f642 \
+  ghcr.io/importantimport/hatsu:nightly
+</code></pre>
+<p>You need to specify all environment variables at once. For more information, see <a href="admins/./environments.html">Environments</a>.</p>
+<!-- You can also use the docker-compose example in examples. (TODO) -->
+<div style="break-before: page; page-break-before: always;"></div><h1 id="binary-installation"><a class="header" href="#binary-installation">Binary Installation</a></h1>
+<h2 id="stable-1"><a class="header" href="#stable-1">Stable</a></h2>
+<p>Doesn't have a stable version yet.</p>
+<h2 id="nightly-1"><a class="header" href="#nightly-1">Nightly</a></h2>
+<p>Hatsu provides nightly Binary builds.</p>
+<p>Please note that it is unstable and may contain breaking changes.</p>
+<p>You can find the latest artifacts on the <a href="https://github.com/importantimport/hatsu/actions/workflows/nightly.yml">Workflow runs page</a> (containing <code>x86_64-unknown-linux-gnu</code> and <code>aarch64-unknown-linux-gnu</code>).</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="environments"><a class="header" href="#environments">Environments</a></h1>
+<p>Hatsu supports dotenv, and you can set environment variables via the <code>.env</code> file.</p>
+<p>It is required unless it has a suffix (optional).</p>
+<p>However, it may exist as a built-in preset (in the source code) or an example preset (in <a href="https://github.com/importantimport/hatsu/blob/main/.env.example"><code>.env.example</code></a>)</p>
+<h2 id="database_url"><a class="header" href="#database_url">DATABASE_URL</a></h2>
+<ul>
+<li>default: <code>sqlite::memory:</code></li>
+<li>example: <code>sqlite://hatsu.sqlite3</code></li>
+</ul>
+<p>Should be a valid <code>sqlite:</code> or <code>postgres:</code> URL. see <a href="https://www.sea-ql.org/SeaORM/docs/install-and-config/connection/#connection-string">sea-ql.org</a></p>
+<p><code>sqlite::memory:</code> is used by default to ensure that hatsu does not report errors as a result.</p>
+<p>If you're not using a Postgres database, I recommend keeping the <code>sqlite://hatsu.sqlite3</code>.</p>
+<h2 id="hatsu_domain"><a class="header" href="#hatsu_domain">HATSU_DOMAIN</a></h2>
+<ul>
+<li>default: None</li>
+<li>example: <code>hatsu.local</code></li>
+</ul>
+<p>The domain name you assigned to this Hatsu instance.</p>
+<h2 id="hatsu_listen_host"><a class="header" href="#hatsu_listen_host">HATSU_LISTEN_HOST</a></h2>
+<ul>
+<li>default: <code>127.0.0.1</code></li>
+<li>example: <code>0.0.0.0</code></li>
+</ul>
+<p>The hostname on which the Hatsu server listens.</p>
+<h2 id="hatsu_listen_port"><a class="header" href="#hatsu_listen_port">HATSU_LISTEN_PORT</a></h2>
+<ul>
+<li>default: <code>3939</code></li>
+<li>example: <code>3939</code></li>
+</ul>
+<p>The port on which the Hatsu server listens.</p>
+<h2 id="hatsu_primary_account"><a class="header" href="#hatsu_primary_account">HATSU_PRIMARY_ACCOUNT</a></h2>
+<ul>
+<li>default: None</li>
+<li>example: None</li>
+</ul>
+<p>The primary account for this Hatsu instance, which cannot be removed and is used as a <code>signed_fetch_actor</code>.</p>
+<h2 id="hatsu_access_token-optional"><a class="header" href="#hatsu_access_token-optional">HATSU_ACCESS_TOKEN (optional)</a></h2>
+<ul>
+<li>default: None</li>
+<li>example: None</li>
+</ul>
+<p>For accessing Admin API.</p>
+<p>If this value is not set, the Hatsu Admin API will not be available.</p>
 <p>This can be any string, but I recommend generating a random uuid v4.</p>
-<pre><code class="language-bash">echo &quot;HATSU_ACCESS_TOKEN = \&quot;$(cat /proc/sys/kernel/random/uuid)\&quot;&quot; &gt;&gt; .env
+<pre><code class="language-bash">echo &quot;\nHATSU_ACCESS_TOKEN = \&quot;$(cat /proc/sys/kernel/random/uuid)\&quot;&quot; &gt;&gt; .env
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="create-account"><a class="header" href="#create-account">Create Account</a></h1>
-<p>Ensure you set <code>HATSU_ACCESS_TOKEN</code> correctly in the <a href="admins/./install-with-docker.html">previous section</a> first, otherwise you will not be able to use the Hatsu Admin API.</p>
+<p>Ensure you set <code>HATSU_ACCESS_TOKEN</code> correctly in the <a href="admins/./environments.html#hatsu_access_token-optional">previous section</a> first, otherwise you will not be able to use the Hatsu Admin API.</p>
 <h2 id="just"><a class="header" href="#just">just</a></h2>
 <p>The easiest way to create an account is the <a href="https://github.com/casey/just"><code>just</code></a> command line tool:</p>
 <pre><code class="language-bash">just account create example.com
