deploy: 0c660f969cb5847b84f4d78fa8e1b2d8d4017b8e

--- a/admins/install-binary.html
+++ b/admins/install-binary.html
@@ -187,6 +187,7 @@
 <p>Hatsu provides nightly Binary builds.</p>
 <p>Please note that it is unstable and may contain breaking changes.</p>
 <p>You can find the latest artifacts on the <a href="https://github.com/importantimport/hatsu/actions/workflows/nightly.yml">Workflow runs page</a> (containing <code>x86_64-unknown-linux-gnu</code> and <code>aarch64-unknown-linux-gnu</code>).</p>
+<p>GitHub has a document that tells you how to download artifact: <a href="https://docs.github.com/en/actions/managing-workflow-runs/downloading-workflow-artifacts">https://docs.github.com/en/actions/managing-workflow-runs/downloading-workflow-artifacts</a></p>
 
                     </main>
 
