--- a/others/compatibility-chart.html
+++ b/others/compatibility-chart.html
@@ -184,7 +184,7 @@
 <p>Hatsu is primarily geared towards the micro-blogging platform in the Fediverse.</p>
 <p>Currently I've created a chart for all the platforms I expect to be compatible with, and hopefully it will be filled in later:</p>
 <h2 id="send"><a class="header" href="#send">Send</a></h2>
-<div class="table-wrapper"><table><thead><tr><th></th><th><a href="https://www.w3.org/ns/activitystreams#Note">Note</a></th><th><a href="https://www.w3.org/ns/activitystreams#Accept">Accept</a></th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th></th><th><a href="https://www.w3.org/ns/activitystreams#Note">Create</a> (Note)</th><th><a href="https://www.w3.org/ns/activitystreams#Accept">Accept</a> (Follow)</th></tr></thead><tbody>
 <tr><td>Mastodon</td><td>✅</td><td>✅</td></tr>
 <tr><td>GoToSocial</td><td></td><td></td></tr>
 <tr><td>Misskey</td><td></td><td></td></tr>
