--- a/users/redirecting-with-platform-specific-config.html
+++ b/users/redirecting-with-platform-specific-config.html
@@ -183,7 +183,7 @@
                         <h1 id="redirecting-with-platform-specific-configuration"><a class="header" href="#redirecting-with-platform-specific-configuration">Redirecting with Platform-Specific Configuration</a></h1>
 <p>Works with <a href="https://docs.netlify.com/routing/redirects/#syntax-for-the-netlify-configuration-file">Netlify</a> and <a href="https://vercel.com/docs/projects/project-configuration#redirects">Vercel</a>.</p>
 <h2 id="well-known"><a class="header" href="#well-known">Well Known</a></h2>
-<h3 id="netlify-netlifytoml"><a class="header" href="#netlify-netlifytoml">Netlify <code>netlify.toml</code></a></h3>
+<h3 id="netlify-netlifytoml"><a class="header" href="#netlify-netlifytoml">Netlify (<code>netlify.toml</code>)</a></h3>
 <p>Create a <code>netlify.toml</code> file in the root directory containing the following:</p>
 <blockquote>
 <p>Replace <code>hatsu.local</code> with your Hatsu instance.</p>
@@ -201,7 +201,7 @@
   to = &quot;https://hatsu.local/.well-known/webfinger&quot;
   status = 307
 </code></pre>
-<h3 id="vercel-verceljson"><a class="header" href="#vercel-verceljson">Vercel <code>vercel.json</code></a></h3>
+<h3 id="vercel-verceljson"><a class="header" href="#vercel-verceljson">Vercel (<code>vercel.json</code>)</a></h3>
 <p>Create a <code>vercel.json</code> file in the root directory containing the following:</p>
 <blockquote>
 <p>Replace <code>hatsu.local</code> with your Hatsu instance.</p>
