--- a/intro.html
+++ b/intro.html
@@ -181,32 +181,21 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>Hatsu is a self-hosted application that brings your static site to the Fediverse.</p>
-<p>It makes everything as automated as possible:
-All you have to do is enter a website URL with a valid feed and set up a redirect, and Hatsu does the rest.</p>
-<p>It automatically checks for feed updates to create/update posts
-and forwards the received responses back to the site in a Webmention.</p>
-<h2 id="features"><a class="header" href="#features">Features</a></h2>
+<p>Hatsu is a self-hosted bridge that interacts with Fediverse on behalf of your static site.</p>
+<p>Normally it can do all that:</p>
 <ul>
-<li>Written in Rust.
-<ul>
-<li>It's fast and suitable for running on a low-provisioned VPS.</li>
+<li>When a Fediverse user searches for your site URL (<code>https://example.com/hello-world</code>), <a href="./users/redirecting-with-static-files-and-markup.html#as2-alternate">redirects</a> to the corresponding post on the Hatsu instance</li>
+<li>When a Fediverse user searches for a user of your site (<code>@catch-all@example.com</code>), <a href="./users/redirecting-with-static-files-and-markup.html#well-known">redirects</a> to the corresponding user of the Hatsu instance</li>
+<li>Receive replies from Fediverse users and <a href="./users/backfeed.html">backfeed</a> to your static site</li>
 </ul>
-</li>
-<li>Supports both SQLite and Postgres.
-<ul>
-<li>If you don't want to use Postgres, SQLite would be an easy solution.</li>
-</ul>
-<!-- - Also works well with [Litestream](https://litestream.io/) or [LiteFS](https://fly.io/docs/litefs/)! -->
-</li>
-</ul>
+<p>Best of all, these are fully automated! Just set it up once and you won't need to do anything else.</p>
 <h2 id="comparison"><a class="header" href="#comparison">Comparison</a></h2>
 <p>Hatsu is still a Work-In-Progress. It is similar to Bridgy Fed but different:</p>
 <ul>
 <li>Hatsu uses Feed (JSON / Atom / RSS) as a data source instead of HTML pages with microformats2.</li>
 <li>Hatsu doesn't require you to automatically or manually send Webmention reminders for create and update, it's all fully automated.</li>
 </ul>
-<p>If you don't want to self-host, you may still want to use Bridgy or Bridgy Fed in some cases:</p>
+<p>If you don't want to self-host, you may still want to use Bridgy Fed or Bridgy in some cases:</p>
 <h3 id="bridgy-fed"><a class="header" href="#bridgy-fed">Bridgy Fed</a></h3>
 <ul>
 <li>You don't mind compatibility with platforms other than Mastodon.</li>
