--- a/intro.html
+++ b/intro.html
@@ -182,11 +182,12 @@
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
 <p>Hatsu is a self-hosted bridge that interacts with Fediverse on behalf of your static site.</p>
-<p>Normally it can do all that:</p>
+<p>Normally it can do all the:</p>
 <ul>
-<li>When a Fediverse user searches for your site URL (<code>https://example.com/hello-world</code>), <a href="./users/redirecting-with-static-files-and-markup.html#as2-alternate">redirects</a> to the corresponding post on the Hatsu instance</li>
-<li>When a Fediverse user searches for a user of your site (<code>@catch-all@example.com</code>), <a href="./users/redirecting-with-static-files-and-markup.html#well-known">redirects</a> to the corresponding user of the Hatsu instance</li>
-<li>Receive replies from Fediverse users and <a href="./users/backfeed.html">backfeed</a> to your static site</li>
+<li>When a Fediverse user searches for a user of your site (<code>@catch-all@example.com</code>), <a href="./users/redirecting-with-static-files-and-markup.html#well-known">redirects</a> to the corresponding user of the Hatsu instance.</li>
+<li>When a Fediverse user searches for your site URL (<code>https://example.com/hello-world</code>), <a href="./users/redirecting-with-static-files-and-markup.html#as2-alternate">redirects</a> to the corresponding post on the Hatsu instance.</li>
+<li>Accepts follow requests and pushes new posts to the follower's homepage as they become available.</li>
+<li>Receive replies from Fediverse users and <a href="./users/backfeed.html">backfeed</a> to your static site.</li>
 </ul>
 <p>Best of all, these are fully automated! Just set it up once and you won't need to do anything else.</p>
 <h2 id="comparison"><a class="header" href="#comparison">Comparison</a></h2>
